--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cypress": "^9.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.3.0",
+    "license-checker": "^25.0.1",
     "semantic-release": "^18.0.1",
     "start-server-and-test": "^1.14.0"
   },
