--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^16.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "commitlint": "^16.0.2",
     "cypress": "^9.0.0",
     "cz-conventional-changelog": "^3.3.0",
